# defigo-monitor

./: .gitignore  app.h.in  emak.ini  meson.build
include/: app_bus.h  bus.h
src/: app.c  app_bus.c  bus.c
